WIP, cleaned up js code with modules importt/export

--- a/kantech_code/index.html
+++ b/kantech_code/index.html
@@ -24,6 +24,7 @@
          <div id="out8" class="circle"></div>
       </div>
    </div>
+
    <div id="d8Container">
       <div class="d8Size">
          <div class="d8Grid">
@@ -102,7 +103,7 @@
 
       <!-- === READERS === -->
       <div class="readerSize">
-         <div class="readerGrid">
+         <div id='readerGrid1' class="readerGrid">
             <div id='reader1-_5v' class="text-format">+5V</div>
             <div id='reader1-d0' class="text-format">D0</div>
             <div id='reader1-d1' class="text-format">D1</div>
@@ -117,7 +118,7 @@
       </div>
 
       <div class="readerSize">
-         <div class="readerGrid">
+         <div id='readerGrid2' class="readerGrid">
             <div id='reader2-_5v' class="text-format">+5V</div>
             <div id='reader2-d0' class="text-format">D0</div>
             <div id='reader2-d1' class="text-format">D1</div>
@@ -131,16 +132,10 @@
          </div>
       </div>
 
-
    </div>
 
-
-
+   <!-- === JavaScript === -->
    <script type="module" src="index.js"></script>
-   <!-- <script type="module" src="components/input.js"></script> -->
-   <!-- <script src="components/input.js"></script>
-   <script src="components/reader.js"></script>
-   <script src="components/d8outputs.js"></script> -->
 
 </body>
 
