WIP, got inputdoor2 woring with d8

--- a/kantech_code/index.html
+++ b/kantech_code/index.html
@@ -79,10 +79,10 @@
 
       <!-- === INPUTS === -->
       <div class="zoneInputSize">
-         <div class="inputGrid">
+         <div id='inputDoor1' class="inputGrid">
             <div id="input_door1_door" class="text-format">Door</div>
             <div id="input_door1_c1" class="text-format">C</div>
-            <div id="input_door1_rex1" class="text-format">REX</div>
+            <div id="input_door1_rex" class="text-format">REX</div>
             <div id="input_door1_zn3" class="text-format">ZN-3</div>
             <div id="input_door1_c2" class="text-format">C</div>
             <div id="input_door1_zn4" class="text-format">ZN-4</div>
@@ -90,7 +90,7 @@
          </div>
       </div>
       <div class="zoneInputSize">
-         <div class="inputGrid">
+         <div id='inputDoor2' class="inputGrid">
             <div id="input_door2_door" class="text-format">Door</div>
             <div id="input_door2_c1" class="text-format">C</div>
             <div id="input_door2_rex" class="text-format">REX</div>
@@ -134,6 +134,8 @@
 
    </div>
 
+
+   
    <!-- === JavaScript === -->
    <script type="module" src="index.js"></script>
 
