WIP, working on making views folders, may chnage entire programm into reactJS for templating purposes... maybe PHP too

--- a/kantech_code/index.html
+++ b/kantech_code/index.html
@@ -4,141 +4,12 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>ABB - Security</title>
-   <link rel="stylesheet" href="style.css">
+   <title>ABB - Home</title>
+</head>
 
 <body>
-   <h1 id="title">Kantech-400</h1>
-   <p id="title">ABB Setup</p>
-
-   <!-- === D8 === -->
-   <div class="circleContainer">
-      <div class="circleSize">
-         <div id="out1" class="circle"></div>
-         <div id="out2" class="circle"></div>
-         <div id="out3" class="circle"></div>
-         <div id="out4" class="circle"></div>
-         <div id="out5" class="circle"></div>
-         <div id="out6" class="circle"></div>
-         <div id="out7" class="circle"></div>
-         <div id="out8" class="circle"></div>
-      </div>
-   </div>
-
-   <div id="d8Container">
-      <div class="d8Size">
-         <div class="d8Grid">
-            <div id="d1" class="d8-text-format">
-               <div id="positive">+</div>
-               <div id="negative">-</div>
-            </div>
-            <div id="d2" class="d8-text-format">
-               <div id="positive">+</div>
-               <div id="negative">-</div>
-            </div>
-            <div id="d3" class="d8-text-format">
-               <div id="positive">+</div>
-               <div id="negative">-</div>
-            </div>
-            <div id="d4" class="d8-text-format">
-               <div id="positive">+</div>
-               <div id="negative">-</div>
-            </div>
-            <div id="d5" class="d8-text-format">
-               <div id="positive">+</div>
-               <div id="negative">-</div>
-            </div>
-            <div id="d6" class="d8-text-format">
-               <div id="positive">+</div>
-               <div id="negative">-</div>
-            </div>
-            <div id="d7" class="d8-text-format">
-               <div id="positive">+</div>
-               <div id="negative">-</div>
-            </div>
-            <div id="d8" class="d8-text-format">
-               <div id="positive">+</div>
-               <div id="negative">-</div>
-            </div>
-            <div class="d8-title-format">OUT 1</div>
-            <div class="d8-title-format">OUT 2</div>
-            <div class="d8-title-format">OUT 3</div>
-            <div class="d8-title-format">OUT 4</div>
-            <div class="d8-title-format">OUT 5</div>
-            <div class="d8-title-format">OUT 6</div>
-            <div class="d8-title-format">OUT 7</div>
-            <div class="d8-title-format">OUT 8</div>
-         </div>
-      </div>
-
-   </div>
-
-   <br>
-
-   <div id="inputReaderContainer">
-
-      <!-- === INPUTS === -->
-      <div class="zoneInputSize">
-         <div id='inputDoor1' class="inputGrid">
-            <div id="input_door1_door" class="text-format">Door</div>
-            <div id="input_door1_c1" class="text-format">C</div>
-            <div id="input_door1_rex" class="text-format">REX</div>
-            <div id="input_door1_zn3" class="text-format">ZN-3</div>
-            <div id="input_door1_c2" class="text-format">C</div>
-            <div id="input_door1_zn4" class="text-format">ZN-4</div>
-            <div class="input-title-format">- INPUT DOOR 1 -</div>
-         </div>
-      </div>
-      <div class="zoneInputSize">
-         <div id='inputDoor2' class="inputGrid">
-            <div id="input_door2_door" class="text-format">Door</div>
-            <div id="input_door2_c1" class="text-format">C</div>
-            <div id="input_door2_rex" class="text-format">REX</div>
-            <div id="input_door2_zn7" class="text-format">ZN-7</div>
-            <div id="input_door2_c2" class="text-format">C</div>
-            <div id="input_door2_zn8" class="text-format">ZN-8</div>
-            <div class="input-title-format">-INPUT DOOR 2 -</div>
-         </div>
-      </div>
-
-      <!-- === READERS === -->
-      <div class="readerSize">
-         <div id='readerGrid1' class="readerGrid">
-            <div id='reader1-_5v' class="text-format">+5V</div>
-            <div id='reader1-d0' class="text-format">D0</div>
-            <div id='reader1-d1' class="text-format">D1</div>
-            <div id='reader1-grd' class="text-format">GRD</div>
-            <div id='reader1-out1' class="text-format">OUT1</div>
-            <div id='reader1-out2' class="text-format">OUT2</div>
-            <div id='reader1-led' class="text-format">LED</div>
-            <div id='reader1-buz' class="text-format">BUZ</div>
-            <div id='reader1-_12v' class="text-format">+12V</div>
-            <div class="reader-title-format">- READER DOOR 1 -</div>
-         </div>
-      </div>
-
-      <div class="readerSize">
-         <div id='readerGrid2' class="readerGrid">
-            <div id='reader2-_5v' class="text-format">+5V</div>
-            <div id='reader2-d0' class="text-format">D0</div>
-            <div id='reader2-d1' class="text-format">D1</div>
-            <div id='reader2-grd' class="text-format">GRD</div>
-            <div id='reader2-out1' class="text-format">OUT1</div>
-            <div id='reader2-out2' class="text-format">OUT2</div>
-            <div id='reader2-led' class="text-format">LED</div>
-            <div id='reader2-buz' class="text-format">BUZ</div>
-            <div id='reader2-_12v' class="text-format">+12V</div>
-            <div class="reader-title-format">- READER DOOR 2 -</div>
-         </div>
-      </div>
-
-   </div>
-
-
+   <h1>Home Page</h1>
+   <a href="./views/kt400.html"><button>KT-400</button></a>
    
-   <!-- === JavaScript === -->
-   <script type="module" src="index.js"></script>
-
 </body>
-
 </html>
